# fit-AI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  alembic.ini  body-measurement-feature-plan.md  docker-compose.yml  fit_agent_plan.md  fly.toml  pyproject.toml
alembic/: env.py
alembic/versions/: 0d112bc9611d_initial_schema.py
docs/: developer_setup_guide.md  multi_model_migration_guide.md  multi_model_testing_strategy.md
src/: __init__.py  auth.py  config.py  database.py  exceptions.py  main.py  rate_limit.py  schemas.py
src/api/: __init__.py  ai.py  auth.py  data.py  pages.py
src/models/: __init__.py  ai.py  nutrition.py  user.py  workout.py
src/schemas/: error.py
src/services/: __init__.py  ai.py
src/templates/: base.html  dashboard.html  index.html  login.html  nutrition.html  register.html  workouts.html
tests/: __init__.py  conftest.py
